--- a/public/popup.css
+++ b/public/popup.css
@@ -63,6 +63,13 @@
   cursor: pointer;
 }
 
+.uuidButton {
+  height: 20px;
+  padding: 0 5px;
+
+  cursor: pointer;
+}
+
 #videoInfo>p, #videoInfo>div>p {
   margin: 0;
 }
