--- a/public/popup.css
+++ b/public/popup.css
@@ -6,7 +6,7 @@
   --sb-green-bg: #077B27;
 }
 
-.sponsorBlockreativKPopupBody .hidden {
+#sponsorBlockreativKPopupBody .hidden {
   display: none !important;
 }
 
