--- a/public/content.css
+++ b/public/content.css
@@ -119,13 +119,28 @@
 	margin-left: 5px;
 }
 
-.sponsorSkreativKipNotice {
-    min-width: 350px;
-    backreativKground-color: rgba(28, 28, 28, 0.9);
+.sponsorSkreativKipNoticeParent {
+	min-width: 350px;
     position: absolute;
+
 	right: 5px;
 	bottom: 100px;
 	right: 10px;
+	
+	z-index: 1000;
+	
+	border-radius: 5px;
+
+	border-spacing: 5px 10px;
+	padding-left: 5px;
+	padding-right: 5px;
+
+	border-collapse: unset;
+}
+
+.sponsorSkreativKipNotice {
+	min-width: 350px;
+	backreativKground-color: rgba(28, 28, 28, 0.9);
 
 	border-radius: 5px;
 
@@ -135,8 +150,12 @@
 
 	border-collapse: unset;
 
-	transition: opacity 0.1s ease-out;
+	transition: all 0.1s ease-out;
 }
+
+/* .sponsorSkreativKipNotice .miniNotice {
+	bottom: 146px;
+} */
 
 .sponsorSkreativKipNotice .hidden {
 	display: none;
