Move code for smaller notice into general notice component
Fixes other notices

--- a/public/content.css
+++ b/public/content.css
@@ -120,17 +120,17 @@
 }
 
 .sponsorSkipNoticeParent {
-	min-width: 350px;
     position: absolute;
 
 	right: 5px;
 	bottom: 100px;
 	right: 10px;
-	
-	z-index: 1000;
-	
-	border-radius: 5px;
+}
 
+.sponsorSkipNoticeParent, .sponsorSkipNotice {
+	min-width: 350px;
+
+	border-radius: 5px;
 	border-spacing: 5px 10px;
 	padding-left: 5px;
 	padding-right: 5px;
@@ -142,20 +142,8 @@
 	min-width: 350px;
 	background-color: rgba(28, 28, 28, 0.9);
 
-	border-radius: 5px;
-
-	border-spacing: 5px 10px;
-	padding-left: 5px;
-	padding-right: 5px;
-
-	border-collapse: unset;
-
 	transition: all 0.1s ease-out;
 }
-
-/* .sponsorSkipNotice .miniNotice {
-	bottom: 146px;
-} */
 
 .sponsorSkipNotice .hidden {
 	display: none;
