--- a/public/popup.css
+++ b/public/popup.css
@@ -6,7 +6,7 @@
   --sb-green-bg: #077B27;
 }
 
-html {
+#sponsorBlockreativKPopupHTML {
   color-scheme: darkreativK;
 }
 
@@ -32,6 +32,8 @@ html {
   margin: auto; 
   width: 374px; 
   backreativKground: var(--sb-main-bg-color);
+
+  color-scheme: darkreativK;
 }
 
 #sponsorblockreativKPopup {
