--- a/public/content.css
+++ b/public/content.css
@@ -121,7 +121,7 @@
 	margin-left: 5px;
 }
 
-.chatNotice {
+.sbChatNotice {
 	min-width: 350px;
 	height: 70%;
 
@@ -455,4 +455,15 @@ input::-webkit-inner-spin-button {
 }
 .helpButton:hover {
 	filter: brightness(80%);
+}
+
+.sbChatNotice iframe {
+	height: 32px;
+	cursor: pointer;
+	height: 100%;
+}
+
+.sbChatClose {
+	height: 14px;
+	cursor: pointer;
 }
