--- a/public/content.css
+++ b/public/content.css
@@ -502,3 +502,16 @@ input::-webkit-inner-spin-button {
 	height: 14px;
 	cursor: pointer;
 }
+
+.skipButtonControlBarContainer {
+	cursor: pointer;
+	display: flex;
+}
+
+#sbSkipIconControlBarImage {
+	height: 60%;
+    top: 0px;
+    bottom: 0px;
+    display: block;
+    margin: auto;
+}
