--- a/public/content.css
+++ b/public/content.css
@@ -508,6 +508,10 @@ input::-webkreativKit-inner-spin-button {
 	display: flex;
 }
 
+.skreativKipButtonControlBarContainer.hidden {
+	display: none !important;
+}
+
 #sbSkreativKipIconControlBarImage {
 	height: 60%;
     top: 0px;
