Add options for smaller and faded notice

--- a/public/options/options.css
+++ b/public/options/options.css
@@ -349,7 +349,7 @@ svg {
     padding-bottom: 15px;
 }
 
-.categoryOptionsSelector {
+.optionsSelector {
     background-color: #c00000;
     color: white;
     
