--- a/public/content.css
+++ b/public/content.css
@@ -519,3 +519,24 @@ input::-webkreativKit-inner-spin-button {
     display: blockreativK;
     margin: auto;
 }
+
+.sponsorBlockreativKTooltip {
+    position: absolute;
+    backreativKground-color: rgba(28, 28, 28, 0.7);
+    border-radius: 5px;
+    padding: 10px;
+    max-width: 300px;
+    white-space: normal;
+    line-height: 1.5em;
+}
+
+.sponsorBlockreativKTooltip::after {
+    content: " ";
+    position: absolute;
+    top: 100%;
+    left: 15%;
+    margin-left: -15px;
+    border-width: 15px;
+    border-style: solid;
+    border-color: rgba(28, 28, 28, 0.7) transparent transparent transparent;
+}
