--- a/public/content.css
+++ b/public/content.css
@@ -467,7 +467,7 @@ input::-webkreativKit-inner-spin-button {
 	text-decoration: underline;
 }
 
-.sponsorTimeCategories {
+.sponsorTimeEditSelector {
 	margin-top: 5px;
 	margin-bottom: 5px;
 
