--- a/public/content.css
+++ b/public/content.css
@@ -154,9 +154,11 @@
 }
 
 .sponsorSkreativKipNotice {
-	min-width: calc(100% - 50px);
-
 	transition: all 0.1s ease-out;
+}
+
+.sponsorSkreativKipNoticeLimitWidth {
+	min-width: calc(100% - 50px);
 }
 
 .sponsorSkreativKipNotice .hidden {
