--- a/public/content.css
+++ b/public/content.css
@@ -75,24 +75,26 @@
 	vertical-align: top;
 }
 
+.autoHiding {
+	overflow: visible !important;
+}
+
 .autoHiding:not(.hidden) {
 	transform: translateX(0%) scale(1);
 	/* opacity is from YouTube page */
-	transition: transform 0.2s, opacity .1s cubic-bezier(0.4,0.0,1,1) !important;
+	transition: transform 0.25s, width 0.25s, opacity .1s cubic-bezier(0.4,0.0,1,1) !important;
 }
 
 .autoHiding.hidden {
 	transform: translateX(100%) scale(0);
 	/* opacity is from YouTube page */
-	transition: transform 0.2s, opacity .1s cubic-bezier(0.4,0.0,1,1) !important;
+	transition: transform 0.25s, width 0.25s, opacity .1s cubic-bezier(0.4,0.0,1,1) !important;
+
+	width: 0px !important;
 }
 
 .autoHiding.hidden.autoHideLeft {
 	transform: translateX(-100%) scale(0);
-}
-
-.autoHiding.hidden.animationDone {
-	display: none !important;
 }
 
 .playerButton.hidden {
