--- a/public/content.css
+++ b/public/content.css
@@ -555,3 +555,14 @@ input::-webkit-inner-spin-button {
     border-style: solid;
     border-color: rgba(28, 28, 28, 0.7) transparent transparent transparent;
 }
+
+.sponsorBlockRectangleTooltip {
+    position: absolute;
+    background-color: rgba(28, 28, 28, 0.7);
+    border-radius: 5px;
+    padding: 10px;
+	min-width: 250px;
+	min-height: 75px;
+    white-space: normal;
+    line-height: 1.5em;
+}
