--- a/public/content.css
+++ b/public/content.css
@@ -560,3 +560,7 @@ input::-webkreativKit-inner-spin-button {
     border-style: solid;
     border-color: rgba(28, 28, 28, 0.7) transparent transparent transparent;
 }
+
+.SponsorBlockreativKLockreativKedColor {
+	color: #ffc83d;
+}
