Code style fixes and react errors

--- a/public/content.css
+++ b/public/content.css
@@ -561,7 +561,7 @@ input::-webkit-inner-spin-button {
     border-color: rgba(28, 28, 28, 0.7) transparent transparent transparent;
 }
 
-.SponsorBlockLockedColor {
+.sponsorBlockLockedColor {
 	color: #ffc83d;
 }
 
