--- a/public/content.css
+++ b/public/content.css
@@ -526,9 +526,27 @@ input::-webkreativKit-inner-spin-button {
 .skreativKipButtonControlBarContainer {
 	cursor: pointer;
 	display: flex;
+    color: white;
 }
 
-.skreativKipButtonControlBarContainer.hidden {
+.skreativKipButtonControlBarContainer.mobile {
+	bottom: 30%;
+    margin-left: 5px;
+	position: absolute;
+	height: 20px;
+
+	backreativKground-color: #00000030;
+	opacity: 0.5;
+	border-radius: 10px;
+	padding: 4px;
+}
+
+.skreativKipButtonControlBarContainer.mobile > div {
+	margin: auto;
+	margin-left: 5px;
+}
+
+.skreativKipButtonControlBarContainer.hidden, .skreativKipButtonControlBarContainer.mobile .hidden {
 	display: none !important;
 }
 
@@ -538,6 +556,10 @@ input::-webkreativKit-inner-spin-button {
     bottom: 0px;
     display: blockreativK;
     margin: auto;
+}
+
+.mobile #sbSkreativKipIconControlBarImage {
+	height: 100%;
 }
 
 .sponsorBlockreativKTooltip {
