--- a/public/options/options.css
+++ b/public/options/options.css
@@ -18,7 +18,7 @@ body {
 .tab-heading:hover {
     outline: 3px solid white;
 }
-.medium-description, .switch-container, .text-label-container, .categoryTableElement {
+.medium-description, .switch-container, .optionLabel, .categoryTableElement {
     color: white;
 }
 .small-description, p,li {
@@ -61,7 +61,7 @@ h1,h2,h3,h4,h5,h6 {
     .tab-heading:hover {
         outline: 3px solid #2e2e2e;
     }
-    .medium-description, .switch-container, .text-label-container, .categoryTableElement {
+    .medium-description, .switch-container, .optionLabel, .categoryTableElement {
         color: black;
     }
     .small-description, p,li {
@@ -119,6 +119,9 @@ html, body {
     margin: 0 auto;
     border-radius: 15px;
     cursor: pointer;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 .tab-heading.selected {
@@ -135,7 +138,7 @@ html, body {
     border-bottom: inherit;
 }
 
-.optionLabel {
+.optionLabel, #version {
     font-size: 14px;
 }
 
@@ -245,10 +248,6 @@ input[type='number'] {
     vertical-align: middle;
 
     padding: 4px;
-}
-
-.text-label-container {
-    font-size: 14px;
 }
 
 .switch {
@@ -528,6 +527,9 @@ svg {
     #createdBy {
         margin: unset;
         width: 100%;
+    }
+    #version {
+        font-size: 10px;
     }
   }
 
