Decrease font size of pill

--- a/public/content.css
+++ b/public/content.css
@@ -619,6 +619,9 @@ input::-webkit-inner-spin-button {
 	padding-right: 8px;
 	margin-right: 3px;
 	color: white;
+	cursor: pointer;
+	font-size: 75%;
+	height: 100%;
 }
 
 .sponsorBlockCategoryPillTitleSection {
