Add vote buttons to pill that open on click

--- a/public/content.css
+++ b/public/content.css
@@ -622,6 +622,7 @@ input::-webkit-inner-spin-button {
 	cursor: pointer;
 	font-size: 75%;
 	height: 100%;
+	align-items: center;
 }
 
 .sponsorBlockCategoryPillTitleSection {
